_sass/devlopr.scss
/* devlopr-jekyll styling */

/* variables */
$body-typeface:'Quicksand', sans-serif;
$nav-typeface: "Gill sans";
$mono-typeface: Menlo, Monaco, monospace;
$text-width: 650px;

html[data-theme="dark"] {
    --bold-color: rgb(188, 188, 188);
    --box-background-color: hsl(0, 0%, 20%);
    --highlight-color: hsl(0, 0%, 60%);
    --light-border-color: hsl(0, 0%, 30%);
    --light-text-color: rgb(199, 199, 204);
    --link-color: #f69801;
    --link-color-visited: hsl(250, 100%, 60%);
    --main-background-color: rgb(28, 28, 30);
    --main-text-color: rgb(139, 139, 139);
    --medium-text-color: hsl(0, 0%, 70%);
    --underline-color: hsl(0, 0%, 50%);
    --social-link-color: #ffffff;
    --card-background-color: rgb(32, 32, 34);
    --newsletter-background-color: #222324;
    --button-background-color: #111;
}

html,
html[data-theme="light"] {
    --bold-color: rgb(0, 0, 0);
    --box-background-color: rgb(249, 249, 250);
    --highlight-color: hsl(0, 0%, 80%);
    --light-border-color: rgb(230, 230, 230);
    --light-text-color: rgb(72, 72, 74);
    --link-color: rgb(0, 112, 201);
    --link-color-visited: hsl(250, 100%, 37%);
    --main-background-color: rgb(255, 255, 255);
    --main-text-color: rgb(51, 51, 51);
    --medium-text-color: hsl(0, 40%, 2%);
    --sidebar-color: hsl(0, 0%, 90%);
    --underline-color: hsl(0, 0%, 60%);
    --social-link-color: #262222;
    --card-background-color: rgb(250, 250, 250);
    --newsletter-background-color: #00000008;
    --button-background-color: #fff;
}

@media (prefers-color-scheme: dark) {
     /* Dark Mode */
    html,
    html[data-theme="dark"] {
        --bold-color: rgb(188, 188, 188);
        --box-background-color: hsl(0, 0%, 20%);
        --highlight-color: hsl(0, 0%, 60%);
        --light-border-color: hsl(0, 0%, 30%);
        --light-text-color: rgb(199, 199, 204);
        --link-color: #f69801;
        --nav-color: #131313;
        --search-color: #FF7901;
        --nav-link-color: rgba(255, 255, 255, .5);
        --link-color-visited: hsl(250, 100%, 60%);
        --main-background-color: rgb(28, 28, 30);
        --main-text-color: rgb(139, 139, 139);
        --medium-text-color: hsl(0, 0%, 70%);
        --underline-color: hsl(0, 0%, 50%);
        --social-link-color: #ffffff;
        --card-background-color: rgb(32, 32, 34);
        --newsletter-background-color: #222324;
        --button-background-color: #111;
    }

    /* Light Mode */
    html[data-theme="light"] {
        --bold-color: rgb(0, 0, 0);
        --box-background-color: rgb(249, 249, 250);
        --highlight-color: hsl(0, 0%, 80%);
        --light-border-color: rgb(230, 230, 230);
        --light-text-color: rgb(72, 72, 74);
        --link-color: #ca6521;
        --nav-color: #ffffff;
        --nav-link-color: #111111;
        --search-color: #ababab;
        --link-color-visited: hsl(250, 100%, 37%);
        --main-background-color: rgb(255, 255, 255);
        --main-text-color: rgb(51, 51, 51);
        --medium-text-color: hsl(0, 0%, 20%);
        --sidebar-color: hsl(0, 0%, 90%);
        --underline-color: hsl(0, 0%, 60%);
        --social-link-color: #262222;
        --card-background-color: rgb(250, 250, 250);
        --button-background-color: #fff;
    }
}

html,
html[data-theme="dark"],
html[data-theme="light"] {
    height: 100%;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    scroll-behavior: smooth;
}

* {
    margin: 0;
    padding: 0;
}

ol, ul {
    margin-left: 30px !important;
}

/* Progress bar */
.progressline .bar {
    background: #f69801;
}

/* On scroll progress bar */
#progress-bar {
    background: linear-gradient(to right, #f69801 var(--progress), transparent 0);
    height: 5px;
    position: fixed;
    width: 100%;
    overflow: hidden;
    z-index: 1;
    margin-top: 25px;
}

body {
    background-color: var(--main-background-color) !important;
    color: var(--main-text-color) !important;
    font-family: 'Quicksand', sans-serif !important;
    font-feature-settings: "kern"on;
    font-size: 1.4rem;
    font-variant-numeric: oldstyle-nums;
    hanging-punctuation: first last;
    height: 100%;
    line-height: 1.35em;
    margin: 0;
    text-rendering: optimizeLegibility;
    padding-top:33px;
    overflow-x:hidden;
    overflow-y:scroll;
}

.reactions-view {
    color: var(--bold-color) !important;
}

.col-lg-12{
    padding-left: 0px !important;
    padding-top: 20px !important;
    padding-right: 0px !important;
}

.col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
    padding-left: 5px !important;
}

pre {
    display: block;
    font-size: 87.5%;
    color: #d4d4d4 !important;
}

.m10{
    margin:35px;
}

blockquote {
    margin: 2rem 1rem 1rem;
    padding: 3px;
    background: var(--main-background-color) !important;
    border: 1px solid;
    color: var(--bold-color);
}

/* Scrollbar */

 /* width */
 ::-webkit-scrollbar {
    width: 10px;
 }

  /* Track */
  ::-webkit-scrollbar-track {
    background:  rgb(28, 28, 30);;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #212529;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #333;
  }

h1, h2, h3, h4, h5, h6 {
  color: var(--bold-color) !important;
  line-height: 1.1;
}

a{
    color: var(--link-color) !important;
}
/* ... */

